--- a/src/app/componenti/cerca/cerca.component.html
+++ b/src/app/componenti/cerca/cerca.component.html
@@ -86,7 +86,7 @@
             </ng-container>
             <ng-container *ngIf="!(getLuoghiSelezionati(luoghi).length !== 0)">
                 <div class="err-container">
-                    <img class="img-errore" src="../../../assets/images/error-search.svg" alt="">
+                    <img class="img-errore" src="assets/images/error-search.svg" alt="">
                     <p class="paragrado-errore">Non abbiamo trovato risultati per la tua ricerca. Prova a <strong>togliere dei filtri o scrivere una query diversa</strong></p>
                 </div>
             </ng-container>
