--- a/src/app/componenti/home/home.component.html
+++ b/src/app/componenti/home/home.component.html
@@ -121,7 +121,7 @@
                             </div>
 
                             <svg-icon [svgStyle]="{ 'width.px':30 }"
-                                src="../../../assets/Icons/tripadvisor-icon.svg"></svg-icon>
+                                src="assets/Icons/tripadvisor-icon.svg"></svg-icon>
                         </div>
                         <div class="commment-content">
                             <p class="comment-title">{{commento.titolo}}</p>
