--- a/src/app/componenti/onboarding/onboarding.component.html
+++ b/src/app/componenti/onboarding/onboarding.component.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="sezione">
-            <svg-icon src="../../../assets/Icons/Map_of_region_of_Lazio.svg" viewBox="auto"></svg-icon>
+            <svg-icon src="assets/Icons/Map_of_region_of_Lazio.svg" viewBox="auto"></svg-icon>
         </div>
 
         <div class="sezione">
