--- a/src/app/componenti/luogo/luogo.component.css
+++ b/src/app/componenti/luogo/luogo.component.css
@@ -117,8 +117,8 @@
 }
 
 .mat-badge-content {
-    background: #D2B48C;
-    color: white;
+  background: #d2b48c;
+  color: white;
 }
 
 .mat-badge-medium.mat-badge-above .mat-badge-content {
@@ -133,13 +133,12 @@
   }
 }
 
-
-.aggiungi-button{
-    background-image: linear-gradient(to right, #002d6b, #015ede) !important;
-    --mdc-chip-label-text-color: white;
+.aggiungi-button {
+  background-image: linear-gradient(to right, #002d6b, #015ede) !important;
+  --mdc-chip-label-text-color: white;
 }
 
-.button-map{
+.button-map {
   border: #015ede solid 1px;
   color: #015ede;
   background-color: white;
@@ -153,10 +152,22 @@
   font-size: medium;
 }
 
-.button-map-container{
+.button-map-container {
   width: 100%;
   height: 50px;
   box-sizing: border-box;
   padding-inline: 1rem;
   margin-bottom: 2rem;
+}
+
+.link-utile {
+  border: none;
+  background: none;
+  padding: 0;
+  color: rgb(63, 34, 145);
+  font-size: 14px;
+  margin-top: 1rem;
+  text-decoration: underline;
+  display: flex;
+  align-items: center;
 }
