--- a/src/app/componenti/profilo-user/profilo-user.component.html
+++ b/src/app/componenti/profilo-user/profilo-user.component.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="content-container" *ngIf="sezioneLink==='badge'">
-                <h3 class="count-challenge">Le tue Badge</h3>
+                <h3 class="count-challenge">I tuoi Badge</h3>
                 <div class="badge-container" *ngFor="let badge of user.badges">
                     <div class="badge">
                         <svg-icon [svgStyle]="{ 'width.px':90 }" src="{{getLink(badge)}}"></svg-icon>
