--- a/src/app/componenti/profilo-user/profilo-user.component.html
+++ b/src/app/componenti/profilo-user/profilo-user.component.html
@@ -32,8 +32,8 @@
 
             <div class="content-container" *ngIf="sezioneLink==='badge'">
                 <h3 class="count-challenge">I tuoi Badge</h3>
-                <div class="badge-container" *ngFor="let badge of user.badges">
-                    <div class="badge">
+                <div class="badge-container" >
+                    <div class="badge" *ngFor="let badge of user.badges">
                         <svg-icon [svgStyle]="{ 'width.px':90 }" src="{{getLink(badge)}}"></svg-icon>
                         <p class="testo-task blu">{{badge}}</p>
                     </div>
