--- a/src/app/dialogs/aggiungi-emozioni-dialog/aggiungi-emozioni-dialog.component.css
+++ b/src/app/dialogs/aggiungi-emozioni-dialog/aggiungi-emozioni-dialog.component.css
@@ -5,7 +5,7 @@
 
 .container {
   background-color: #f5f3f7;
-  width: 300px;
+  width: 100%;
 }
 
 .label-titolo {
@@ -19,7 +19,7 @@
 }
 
 .footer {
-  padding-top: 50px;
+  padding-top: 25px;
 }
 .sezione {
   width: 100%;
