--- a/src/app/componenti/onboarding/onboarding.component.html
+++ b/src/app/componenti/onboarding/onboarding.component.html
@@ -35,7 +35,7 @@
                 Contribuisci all'anima locus
             </h3>
             <p class="paragrafo">
-                Le tue emozioni e i tuoi consigli da insider creano una risorsa per la community
+                Le tue emozioni e i tuoi consigli da insider sono una risorsa per la community
             </p>
         </div>
 
