--- a/src/app/dialogs/login-signup-dialog/login-signup-dialog.component.html
+++ b/src/app/dialogs/login-signup-dialog/login-signup-dialog.component.html
@@ -10,11 +10,10 @@
         </div>
         <mat-dialog-content class="mat-typography">
             <h3 class="titolo-blocco">
-                Partecipa al community game conviaggiatori come te
+                Partecipa al community game assieme ad altri viaggiatori come te
             </h3>
             <p class="paragrafo-blocco">
-                Scopri luoghi sconosciuti, racconta le tue emozioni e vai alla caccia al tesoro quando visiti i luoghi nella vita
-                reale
+                Scopri luoghi sconosciuti, racconta le tue emozioni e organizza la tua visita
             </p>
             
             <form [formGroup]="signup" class="login-form" (ngSubmit)="onSingupSubmit()">
@@ -60,11 +59,10 @@
         </div>
         <mat-dialog-content class="mat-typography">
             <h3 class="titolo-blocco">
-                Partecipa al community game conviaggiatori come te
+                Partecipa al community game assieme ad altri viaggiatori come te
             </h3>
             <p class="paragrafo-blocco">
-                Scopri luoghi sconosciuti, racconta le tue emozioni e vai alla caccia al tesoro quando visiti i luoghi nella vita
-                reale
+                Scopri luoghi sconosciuti, racconta le tue emozioni e organizza la tua visita
             </p>
         
             <form [formGroup]="loginForm" class="login-form" (ngSubmit)="onLogInSubmit()">
