titolo esplora al posto di cerca + cambio trunc da 6 riche a 2 righe + aggiunto empty state su anima locus vuoto + aggiunto pagina leaderboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@
                     <button class="link-button" (click)="nav('home')">Home</button>
                 </div>
                 <div class="link">
-                    <button class="link-button" (click)="nav('cerca')">Cerca</button>
+                    <button class="link-button" (click)="nav('cerca')">Esplora</button>
                 </div>
                 <div class="link">
-                    <button class="link-button" (click)="nav('')">Leaderboard</button>
+                    <button class="link-button" (click)="nav('leaderboard')">Leaderboard</button>
                 </div>
                 <div class="link">
                     <button class="link-button" (click)="nav('')">Per Operatori</button>
