--- a/src/app/componenti/anima-locus/anima-locus.component.css
+++ b/src/app/componenti/anima-locus/anima-locus.component.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   background-color: #f5f3f7;
   display: flex;
   flex-direction: column;
@@ -21,11 +21,14 @@
 }
 
 .anima-container {
-  min-height: 800px;
   display: grid;
   grid-template-columns: 100px 100px 100px;
   grid-auto-rows: 100px;
   gap: 1rem;
+  margin-top: 2rem;
+}
+
+.empty-container {
   margin-top: 2rem;
 }
 
@@ -67,4 +70,8 @@
   justify-content: center;
 }
 
-
+.p-empty {
+  font-size: medium;
+  text-align: center;
+  color: #818181;
+}
