--- a/src/app/componenti/cerca/cerca.component.css
+++ b/src/app/componenti/cerca/cerca.component.css
@@ -11,9 +11,8 @@
   width: 100%;
   height: max-content;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
+  flex-direction: column;
 }
 .button-mappa {
   width: 100%;
@@ -28,11 +27,11 @@
   align-items: center;
   justify-content: space-evenly;
   border-radius: 20px;
+  margin-bottom: 2rem;
 }
 
 .login-form {
   width: 100%;
-  margin-bottom: 2rem;
 }
 
 .form-field {
@@ -42,6 +41,9 @@
 .titolo-blocco {
   font-weight: bold;
   font-size: large;
+}
+.esplora{
+  margin-top: 1rem;
 }
 
 input[type="text"] {
@@ -64,8 +66,7 @@ input[type="text"] {
   border: none;
   background: none;
   position: absolute;
-  top: 88px;
-  right: 17px;
+  right: 20px;
   height: 40px;
   width: 40px;
 }
@@ -80,7 +81,7 @@ input[type="text"] {
 }
 
 .card-container {
-  padding-inline: 1rem;
+  padding-inline: 0 !important;
   margin-bottom: 4rem;
 }
 
@@ -112,7 +113,7 @@ input[type="text"] {
 
 .par-card {
   display: -webkit-box;
-  -webkit-line-clamp: 6;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   font-size: small;
@@ -138,6 +139,7 @@ mat-card-title {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #818181;
 }
 
 .img-errore {
