--- a/src/app/dialogs/cerca-mappa/cerca-mappa.component.css
+++ b/src/app/dialogs/cerca-mappa/cerca-mappa.component.css
@@ -8,6 +8,18 @@
   background-color: #f5f3f7;
   min-height: 100%;
 }
+
+.sub-titolo-container{
+  width: 100%;
+  padding-inline: 24px;
+  box-sizing: border-box
+}
+
+.sub-titolo{
+  font-size: medium;
+  color: #818181;
+}
+
 .map-container {
   padding: 1rem 1rem 0 1rem;
 }
