--- a/src/app/dialogs/login-signup-dialog/login-signup-dialog.component.html
+++ b/src/app/dialogs/login-signup-dialog/login-signup-dialog.component.html
@@ -1,9 +1,9 @@
 
 
 <div class="container">
-    <ng-container *ngIf="signupPage">
+    <ng-container *ngIf="pageViewed === 'signup'">
         <div mat-dialog-title class="title" >
-            <h2 class="label-titolo" >Sing up</h2><span style="flex: 1 1 auto"></span> <button mat-mini-fab class="menu-button"
+            <h2 class="label-titolo" >Sign up</h2><span style="flex: 1 1 auto"></span> <button mat-mini-fab class="menu-button"
             [mat-dialog-close]="true">
                 <mat-icon>close</mat-icon>
             </button>
@@ -34,6 +34,8 @@
                     <input class="input-text" placeholder="Conferma Password" type="password" name="confPass" formControlName="confPass">
                     <p [hidden]="hidePassUguale" style="font-size: small; color: red; margin: 0;text-align: center;">Password e Conferma Password non corrispondono, Riprova!</p>
                 </div>
+
+                
                 
         
                 <button class="button" [ngClass]="{'disabled-button': !signup.valid}" type="submit" [disabled]="!signup.valid">
@@ -43,14 +45,14 @@
                 
             </form>
             <div class="switch-button-container">
-                <button class="link" (click)="switchPage()">Hai già un account? Log in</button>
+                <button class="link" (click)="switchPage('login')">Hai già un account? Log in</button>
             </div>
             
            
         </mat-dialog-content>
     </ng-container>
 
-    <ng-container *ngIf="!signupPage">
+    <ng-container *ngIf="pageViewed === 'login'">
         <div mat-dialog-title class="title" >
             <h2>Log in</h2><span style="flex: 1 1 auto"></span> <button mat-mini-fab class="menu-button"
             [mat-dialog-close]="true">
@@ -69,23 +71,61 @@
         
                 <div class="form-field">
                     <p [hidden]="hideCredValidi" style="font-size: small; color: red; margin: 0;text-align: center;">Email o Password non corretti, Riprova!</p>
-                    <input class="input-text" placeholder="Email" type="text" name="email" formControlName="email">
+                    <input class="input-text" placeholder="Email" type="email" name="email" formControlName="email">
                 </div>
         
                 <div class="form-field">
                     <input class="input-text" placeholder="Password" type="password" name="pass" formControlName="pass">
-                    
+                    <button class="link" type="button" (click)="switchPage('passDimenticata')">Password dimenticata?</button>
                 </div>
         
                 <button class="button" type="submit" [ngClass]="{'disabled-button': !loginForm.valid}" [disabled]="!loginForm.valid">
                     Log in
                 </button>
             </form>
+            
 
             <div class="switch-button-container" >
-                <button class="link" (click)="switchPage()">Non hai ancora un account? Registrati</button>
+                <button class="link" (click)="switchPage('signup')">Non hai ancora un account? Registrati</button>
             </div>
+
+        </mat-dialog-content>
+    </ng-container>
+
+
+
+    <ng-container *ngIf="pageViewed === 'passDimenticata'">
+        <div mat-dialog-title class="title" >
+            <h2>Reset Password</h2><span style="flex: 1 1 auto"></span> <button mat-mini-fab class="menu-button"
+            [mat-dialog-close]="true">
+                <mat-icon>close</mat-icon>
+            </button>
+        </div>
+        <mat-dialog-content class="mat-typography">
+            <h3 class="titolo-blocco">
+                Partecipa al community game assieme ad altri viaggiatori come te
+            </h3>
+            <p class="paragrafo-blocco">
+                Scopri luoghi sconosciuti, racconta le tue emozioni e organizza la tua visita
+            </p>
         
+            <form [formGroup]="passDimenticataForm" class="login-form" (ngSubmit)="onPassDimenticataClick()">
+        
+                <div class="form-field">
+                    <p [hidden]="hideEmailErr" style="font-size: small; color: red; margin: 0;text-align: center;">Nessun account corrisponde all'email!</p>
+                    <input class="input-text" placeholder="Email" type="email" name="email" formControlName="email">
+                </div>
+        
+                <button class="button" type="submit" [ngClass]="{'disabled-button': !passDimenticataForm.valid}" [disabled]="!passDimenticataForm.valid">
+                    Invia
+                </button>
+            </form>
+            
+
+            <div class="switch-button-container" >
+                <button class="link" (click)="switchPage('login')">Torna al Log in</button>
+            </div>
+
         </mat-dialog-content>
     </ng-container>
     <div class="footer">
