--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <mat-drawer-container style="min-height: 100%;">
-        <mat-drawer #drawer class="sidenav" mode="over" style="background-color: #f5f3f7">
+    <mat-drawer-container class="drawer-container" >
+        <mat-drawer #drawer class="sidenav" mode="over" >
 
             <div class="close-container">
                 <button mat-mini-fab class="menu-button" (click)="drawer.close()">
