--- a/src/app/componenti/anima-locus/anima-locus.component.html
+++ b/src/app/componenti/anima-locus/anima-locus.component.html
@@ -21,6 +21,6 @@
 
     </div>
     <div class="empty-container" *ngIf="obiettivoSelezionato.container.length == 0">
-        <p class="p-empty">Perché non constribuisci a quest'anima locus con una foto o link utile?</p>
+        <p class="p-empty">Perché non contribuisci a quest'anima locus con una foto o link utile?</p>
     </div>
 </div>
