--- a/src/app/componenti/leaderboard/leaderboard.component.html
+++ b/src/app/componenti/leaderboard/leaderboard.component.html
@@ -14,23 +14,26 @@
     </div>
     <div class="sezione" *ngIf="nomeDaCercare === ''">
         <h3 class="titolo-blocco sub-titolo">Classifica</h3>
-        <div class="task-item" *ngFor="let utente of utenti">
-            <div class="content-item">
-                <div class="text-container">
-                    <p class="posizione">#{{utente.posizione}}</p>
-                    <p class="testo-task">{{utente.nome}}</p>
-                    <div class="badge-container">
-                        <svg-icon src="{{getLink(badge)}}" [svgStyle]="{ 'height.px':'30' }" *ngFor="let badge of utente.badges"></svg-icon>
+        <ng-container *ngIf="utenti">
+            <div class="task-item" *ngFor="let utente of utenti">
+                <div class="content-item">
+                    <div class="text-container">
+                        <p class="posizione">#{{utente.posizione}}</p>
+                        <p class="testo-task">{{utente.nome}}</p>
+                        <div class="badge-container">
+                            <svg-icon src="{{getLink(badge)}}" [svgStyle]="{ 'height.px':'30' }" *ngFor="let badge of utente.badges"></svg-icon>
+                        </div>
                     </div>
-                </div>
-                <div class="livello-container">
-                    <div class="livello">
-                        <svg-icon src="assets/Icons/ranking-star.svg"></svg-icon> {{utente.livello}}
+                    <div class="livello-container">
+                        <div class="livello">
+                            <svg-icon src="assets/Icons/ranking-star.svg"></svg-icon> {{utente.livello}}
+                        </div>
                     </div>
+    
                 </div>
-
             </div>
-        </div>
+        </ng-container>
+        
     </div>
 
     <div class="sezione" *ngIf="nomeDaCercare !== ''">
