--- a/src/app/componenti/home/home.component.css
+++ b/src/app/componenti/home/home.component.css
@@ -4,12 +4,12 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #f5f3f7;
+  background-color: transparent;
 }
 
 .sezione {
   padding-bottom: 2rem;
-  background-color: #f5f3f7;
+  background-color: transparent;
 }
 
 .titolo-blocco {
@@ -180,7 +180,7 @@ mat-card-title {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #f5f3f7;
+  background-color: transparent;
 }
 
 .login-container {
@@ -210,7 +210,7 @@ mat-card-title {
   display: flex;
   padding-top: 40px;
   justify-content: space-evenly;
-  background-color: #f5f3f7;
+  background-color: transparent;
 }
 
 .task-item {
