--- a/src/app/componenti/leaderboard/leaderboard.component.css
+++ b/src/app/componenti/leaderboard/leaderboard.component.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 100%;
   min-height: 100vh;
-  background-color: #f5f3f7;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   padding-inline: 1rem;
